[br3] make video _element_ 16:9, even if the video(s) themselves are different - prevents layout jumping around when switching between variants

--- a/browser3/src/screens/track/track.scss
+++ b/browser3/src/screens/track/track.scss
@@ -3,6 +3,7 @@ MAIN.track {
         VIDEO {
             margin-top: 1rem;
             border: 1px solid var(--list-border);
+            aspect-ratio: 16/9;
             width: 100%;
         }
         DIV.tags {
